<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen1.SubredditsSelectionFragment"
    android:id="@+id/selection"
    >



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />


    <fragment
        android:id="@+id/subscreen_nav_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="false"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph_subscreen" />

    <Button
            app:layout_constraintTop_toBottomOf="@id/guideline3"
            app:layout_constraintBottom_toTopOf="@id/subreddits_rv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="refresh"
            android:alpha="0.7"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subreddits_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refresh_button" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_baseline_navigate_before_36"
        android:clickable="false"
        android:visibility="invisible"

        app:backgroundTint="@color/purple_200"
        app:iconTint="@color/yellow20"

        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_button"

        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_baseline_save_36"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/delete_button"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/delete_button"
        android:visibility="invisible"
        android:clickable="false"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_sharp_delete_36"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline2"

        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintTop_toTopOf="parent"  />
</androidx.constraintlayout.widget.ConstraintLayout>
