...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />


        <TextView
            android:id="@+id/post_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="yes thats it"
            android:gravity="start"
...
